# SufCppLabs

./: .gitignore  CMakeLists.txt  Employee.cpp  README.md
Suf1/lab01/: task1.cpp  task2.cpp  task5.cpp  task6.cpp  task7.cpp
Suf1/lab02/: task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
Suf1/lab03/: task1.cpp  task12.cpp  task16_contest.cpp  task16_submit.cpp  task17_submit.cpp  task18.cpp  task2.cpp  task20.cpp  task21.cpp  task4.cpp  task5.cpp  task9.cpp
Suf1/lab04/: task10.cpp  task11.cpp  task12.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
Suf1/lab04/task14/: main.cpp  task14.cpp
Suf1/lab04/task15/: task15.h
Suf1/lab05/: task10.cpp  task12.cpp  task14.cpp  task18.cpp  task4.cpp  task8.cpp
Suf1/lab06/: task10.cpp  task8.cpp  task9.cpp
Suf1/lab07/: task10.cpp  task11.cpp  task12_contest.cpp  task2.cpp  task3.cpp  task6.cpp
Suf1/lab08/: task1-2.cpp  task12.cpp  task3-4.cpp  task7-8.cpp
Suf1/lab08/task_submit/: array.h  array_funcs.cpp  main.cpp
Suf1/lab09/: task10.cpp  task12.cpp  task13.cpp  task14.cpp  task2.cpp  task3.cpp  task7.cpp
Suf1/lab10/: task3_1.cpp  task3_5.cpp  task7_1.cpp  task8_1.cpp  task8_2.cpp
Suf1/lab10/task_submit/: task.h
Suf1/lab11/: task1.cpp  task6.cpp  task8.cpp
Suf1/lab12/contest/: task3.cpp  task4.cpp  task5.cpp  task7.cpp
Suf1/lab12/task10/: task10.cpp
Suf1/lab12/task6/: i_3.txt  i_4.txt  task6.cpp
Suf1/lab13/: task3.cpp  task4.cpp  task6.cpp
Suf2/lab01/: task1.cpp  task2.cpp  task3.cpp  task5.cpp  task6.cpp  task7.cpp
Suf2/lab01/task4/: task4.cpp
Suf2/lab01/task_submit/: Employee.cpp  Employee.h  Employees_predicates.h  employees.txt  main.cpp
Suf2/lab01/task_submit/Array/: Array_func.cpp  Array_func.h
Suf2/lab01/task_submit/Employee/: Employee.cpp  Employees_predicates.h
Suf2/lab01/task_submit/Vector/: Vector_func.cpp  Vector_func.h
lab01/: task3.cpp  task4.cpp  task7.cpp
lab02/: task15.cpp
lab03/: task10.cpp  task11.cpp  task13.cpp  task14.cpp  task15.cpp  task16.cpp  task17.cpp  task19.cpp  task2.cpp  task20.cpp  task3.cpp  task6.cpp  task7.cpp  task8.cpp
lab04/: task1.cpp  task13.cpp  task2.cpp  task3.cpp  task4.cpp
lab04/task14/: task14.cpp  task14.h
lab04/task15/: main.cpp  task15.cpp
lab05/: task13.cpp  task15.cpp  task15_submit.cpp  task16_submit.cpp  task17.cpp  task18.cpp  task2.cpp  task3.cpp  task5.cpp  task6.cpp
lab06/: task10.cpp  task8.cpp  task9.cpp
lab07/: task1.cpp  task12.cpp  task13.cpp  task14.cpp  task4.cpp  task5.cpp  task7.cpp  task8.cpp  task9.cpp
lab08/: main.cpp  task11.cpp  task13.cpp  task5-6.cpp  task9-10.cpp
lab09/: task1.cpp  task11.cpp  task11_contest.cpp  task12.cpp  task13.cpp  task14.cpp  task4.cpp  task5.cpp  task6.cpp  task8.cpp  task9.cpp
lab10/: main.cpp  task.cpp  task.h  task1.cpp  task10.cpp  task2.cpp  task3.cpp  task3_2.cpp  task3_3.cpp  task3_4.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task7_2.cpp  task9.cpp
lab10/task_submit/: main.cpp  task.cpp
lab11/: task2.cpp  task3.cpp  task4.cpp  task5.cpp  task7.cpp
lab11/task1/: i_1.txt  task1.cpp
lab11/task2/: i_2.txt  o_2.txt  task2.cpp
lab11/task3/: i_3.txt  o_3.txt  task3.cpp
lab11/task4/: o_4.txt  task4.cpp
lab11/task5/: i_5.txt  task5.cpp
lab11/task6/: i_6.txt  task6.cpp
lab11/task7/: i_7.txt  o_7.txt  task7.cpp
lab11/task8/: i_8.txt  task8.cpp
lab12/contest/: task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task2.cpp  task6.cpp  task8.cpp  task9.cpp
lab12/task10/: i_5.txt  test_bin_1.cpp
lab12/task6/: i_5.txt  test_bin_1.cpp
lab13/: task.cpp  task2.cpp  task5.cpp
sufTrash/: trash.cpp
