cmake_minimum_required(VERSION 4.0)
project(C++Suffering)

set(CMAKE_CXX_STANDARD 23)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra")

# Лабораторная работа 1
add_executable(lab01_task1 lab01/task1.cpp)
add_executable(lab01_task2 lab01/task2.cpp)
add_executable(lab01_task3 lab01/task3.cpp)
add_executable(lab01_task4 lab01/task4.cpp)
add_executable(lab01_task5 lab01/task5.cpp)
add_executable(lab01_task6 lab01/task6.cpp)
add_executable(lab01_task7 lab01/task7.cpp)

# Лабораторная работа 2
add_executable(lab02_task1 lab02/task1.cpp)
add_executable(lab02_task2 lab02/task2.cpp)
add_executable(lab02_task3 lab02/task3.cpp)
add_executable(lab02_task4 lab02/task4.cpp)
add_executable(lab02_task5 lab02/task5.cpp)
add_executable(lab02_task6 lab02/task6.cpp)
add_executable(lab02_task7 lab02/task7.cpp)
add_executable(lab02_task8 lab02/task8.cpp)
add_executable(lab02_task9 lab02/task9.cpp)
add_executable(lab02_task10 lab02/task10.cpp)
add_executable(lab02_task11 lab02/task11.cpp)
add_executable(lab02_task12 lab02/task12.cpp)
add_executable(lab02_task13 lab02/task13.cpp)
add_executable(lab02_task14 lab02/task14.cpp)
add_executable(lab02_task15 lab02/task15.cpp)

# Лабораторная работа 3
add_executable(lab03_task1 lab03/task1.cpp)
add_executable(lab03_task2 lab03/task2.cpp)
add_executable(lab03_task3 lab03/task3.cpp)
add_executable(lab03_task4 lab03/task4.cpp)
add_executable(lab03_task5 lab03/task5.cpp)
add_executable(lab03_task6 lab03/task6.cpp)
add_executable(lab03_task7 lab03/task7.cpp)
add_executable(lab03_task8 lab03/task8.cpp)
add_executable(lab03_task9 lab03/task9.cpp)
add_executable(lab03_task10 lab03/task10.cpp)
add_executable(lab03_task11 lab03/task11.cpp)
add_executable(lab03_task12 lab03/task12.cpp)
add_executable(lab03_task13 lab03/task13.cpp)
add_executable(lab03_task14 lab03/task14.cpp)
add_executable(lab03_task15 lab03/task15.cpp)
add_executable(lab03_task16_contest lab03/task16_contest.cpp)
add_executable(lab03_task16_submit lab03/task16_submit.cpp)
add_executable(lab03_task17_contest lab03/task17_contest.cpp)
add_executable(lab03_task17_submit lab03/task17_submit.cpp)
add_executable(lab03_task18 lab03/task18.cpp)
add_executable(lab03_task19 lab03/task19.cpp)
add_executable(lab03_task20 lab03/task20.cpp)
add_executable(lab03_task21 lab03/task21.cpp)

#Лабораторная работа 4
add_executable(lab04_task1 lab04/task1.cpp)
add_executable(lab04_task2 lab04/task2.cpp)
add_executable(lab04_task3 lab04/task3.cpp)
add_executable(lab04_task4 lab04/task4.cpp)
add_executable(lab04_task5 lab04/task5.cpp)
add_executable(lab04_task6 lab04/task6.cpp)
add_executable(lab04_task7 lab04/task7.cpp)
add_executable(lab04_task8 lab04/task8.cpp)
add_executable(lab04_task9 lab04/task9.cpp)
add_executable(lab04_task10 lab04/task10.cpp)
add_executable(lab04_task11 lab04/task11.cpp)
add_executable(lab04_task12 lab04/task12.cpp)
add_executable(lab04_task13 lab04/task13.cpp)
add_executable(lab04_task14 lab04/task14/main.cpp lab04/task14/task14.cpp)
add_executable(lab04_task15 lab04/task15/main.cpp lab04/task15/task15.cpp)

#Лабораторная работа 5
add_executable(lab05_task2 lab05/task2.cpp)
add_executable(lab05_task4 lab05/task4.cpp)
add_executable(lab05_task6 lab05/task6.cpp)
add_executable(lab05_task8 lab05/task8.cpp)
add_executable(lab05_task10 lab05/task10.cpp)
add_executable(lab05_task12 lab05/task12.cpp)
add_executable(lab05_task13 lab05/task13.cpp)
add_executable(lab05_task14 lab05/task14.cpp)
add_executable(lab05_task15 lab05/task15_submit.cpp)
add_executable(lab05_task17 lab05/task17.cpp)
add_executable(lab05_task18 lab05/task18.cpp)

#Лабораторная работа 6
add_executable(lab06_task8 lab06/task8.cpp)
add_executable(lab06_task9 lab06/task9.cpp)
add_executable(lab06_task10 lab06/task10.cpp)

#Лабораторная работа 7
add_executable(lab07_task12 lab07/task12.cpp)
add_executable(lab07_task13 lab07/task13.cpp)
add_executable(lab07_task14 lab07/task14.cpp)

#Лабораторная работа 8
add_executable(lab08_task lab08/main.cpp lab08/array_funcs.cpp)

#Лабораторная работа 9
add_executable(lab09_task1 lab09/task1.cpp)
add_executable(lab09_task2 lab09/task2.cpp)
add_executable(lab09_task3 lab09/task3.cpp)
add_executable(lab09_task4 lab09/task4.cpp)
add_executable(lab09_task5 lab09/task5.cpp)
add_executable(lab09_task6 lab09/task6.cpp)
add_executable(lab09_task7 lab09/task7.cpp)
add_executable(lab09_task8 lab09/task8.cpp)
add_executable(lab09_task9 lab09/task9.cpp)
add_executable(lab09_task10 lab09/task10.cpp)
add_executable(lab09_task11_contest lab09/task11_contest.cpp)
add_executable(lab09_task11_submit lab09/task11_submit.cpp)
add_executable(lab09_task12 lab09/task12.cpp)
add_executable(lab09_task13 lab09/task13.cpp)
add_executable(lab09_task14 lab09/task14.cpp)

#Лабораторная работа 10
add_executable(lab10_task1 lab10/task1.cpp)
add_executable(lab10_task2 lab10/task2.cpp)
add_executable(lab10_task3_1 lab10/task3_1.cpp)
add_executable(lab10_task3_2 lab10/task3_2.cpp)
add_executable(lab10_task3_3 lab10/task3_3.cpp)
add_executable(lab10_task3_4 lab10/task3_4.cpp)
add_executable(lab10_task3_5 lab10/task3_5.cpp)
add_executable(lab10_task4 lab10/task4.cpp)
add_executable(lab10_task5 lab10/task5.cpp)
add_executable(lab10_task6 lab10/task6.cpp)
add_executable(lab10_task7_1 lab10/task7_1.cpp)
add_executable(lab10_task7_2 lab10/task7_2.cpp)
add_executable(lab10_task8_1 lab10/task8_1.cpp)
add_executable(lab10_task8_2 lab10/task8_2.cpp)
add_executable(lab10_task9 lab10/task9.cpp)
add_executable(lab10_task10 lab10/task10.cpp)
add_executable(lab10_task_submit lab10/task_submit/main.cpp lab10/task_submit/task.cpp lab10/task_submit/task.h)

#Лабораторная работа 11
add_executable(lab11_task1 lab11/task1.cpp)
add_executable(lab11_task2 lab11/task2.cpp)
add_executable(lab11_task3 lab11/task3.cpp)
add_executable(lab11_task4 lab11/task4.cpp)
add_executable(lab11_task5 lab11/task5.cpp)
add_executable(lab11_task6 lab11/task6.cpp)
add_executable(lab11_task7 lab11/task7.cpp)
add_executable(lab11_task8 lab11/task8.cpp)

#Лабораторная работа 12
add_executable(lab12_task1 lab12/contest/task1.cpp)
add_executable(lab12_task2 lab12/contest/task2.cpp)
add_executable(lab12_task3 lab12/contest/task3.cpp)
add_executable(lab12_task4 lab12/contest/task4.cpp)
add_executable(lab12_task5 lab12/contest/task5.cpp)
add_executable(lab12_task6 lab12/contest/task6.cpp)
add_executable(lab12_task7 lab12/contest/task7.cpp)
add_executable(lab12_task8 lab12/contest/task8.cpp)
add_executable(lab12_task9 lab12/contest/task9.cpp)
add_executable(lab12_task10 lab12/contest/task10.cpp)
add_executable(lab12_task11 lab12/contest/task11.cpp)
add_executable(lab12_task12 lab12/contest/task12.cpp)
add_executable(lab12_task13 lab12/contest/task13.cpp)
add_executable(lab12_task6_submit lab12/task6/task6.cpp)
add_executable(lab12_task10_submit lab12/task10/task10.cpp)

#Лабораторная работа 13
add_executable(lab13_task1 lab13/task1.cpp)
add_executable(lab13_task2 lab13/task2.cpp)
add_executable(lab13_task3 lab13/task3.cpp)
add_executable(lab13_task4 lab13/task4.cpp)
add_executable(lab13_task5 lab13/task5.cpp)
add_executable(lab13_task6 lab13/task6.cpp)

#Трэш
add_executable(trash trash.cpp)